# goit-web-homework-12

./: main.py  pyproject.toml
src/: schemas.py
src/database/: db.py
src/routes/: contacts.py
src/services/: auth.py
